salesforce/force-app/main/default/objects/Case_Created__e/Case_Created__e.object-meta.xml
<CustomObject>
    <description>Platform Event fired when a new Case is created via Email-to-Case for GTM Brain processing</description>
    <label>Case Created</label>
    <pluralLabel>Case Created Events</pluralLabel>
</CustomObject>