salesforce/force-app/main/default/objects/Case_Created__e/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <description>The Salesforce Case ID</description>
    <label>Case Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>