salesforce/force-app/main/default/objects/Case_Created__e/fields/Email_Alias__c.field-meta.xml
<CustomField>
    <fullName>Email_Alias__c</fullName>
    <description>The email alias this came through (cs-inbound, reminders, quotes)</description>
    <label>Email Alias</label>
    <length>100</length>
    <type>Text</type>
</CustomField>