salesforce/force-app/main/default/objects/Case_Created__e/fields/Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>Sender_Email__c</fullName>
    <description>Email address of the sender</description>
    <label>Sender Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>